--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: OOBN PL JekDraft I
+title: OOBNPL JKDI
 email: ealy@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+  This a webiste that contains a pattern language to help in building OOBN to model complex systems. This is a draft website built using Jekyll tutorial on Github pages.
+baseurl: "https://github.com/EAly/OOBNPL_JeDr1" # the subpath of your site, e.g. /blog
 url: "https://OOBNPL_JD1.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ealy
 github_username:  ealy
