--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url: "https://OOBNPL_JD1.com" # the base hostname & protocol for your site, e.g.
 twitter_username: ealy
 github_username:  ealy
 
-include: ['_pages']
+#include: ['_pages']
 # Build settings
 theme: minima
 plugins:
